Proyecto3/api_read_models/api_read_models/komposefiles/proyecto3_api_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: proyecto3-api-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/proyecto3_api_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/proyecto3_api_network: "true"
